--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -83,7 +83,7 @@
               <!-- This form is pre-integrated with SB Forms.-->
               <!-- To make this form functional, sign up at-->
               <!-- https://startbootstrap.com/solution/contact-forms-->
-              <!-- to get an API token!-->
+              <!-- to get an API token!-->s
               <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                 <!-- Name input-->
                 <div class="form-floating mb-3">
