테스트파일

--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -59,8 +59,8 @@
                     <label class="form-check-label fs-6">아이디 저장하기</label>
                 </div>
                 <ul class="mt-2">
-                    <li><a href="#" class="color-black li-a idSearch">아이디 찾기</a></li>
-                    <li><a href="#" class="color-black li-a pwSearch">비밀번호 찾기</a></li>
+                    <li><a href="/blog/idSearch" class="color-black li-a idSearch">아이디 찾기</a></li>
+                    <li><a href="/blog/pwddSearch" class="color-black li-a pwSearch">비밀번호 찾기</a></li>
                     <li><a href="/blog/agree" class="color-black li-a">회원가입</a></li>
                 </ul>
             </div>
