--- a/src/main/resources/templates/login/idSearch.html
+++ b/src/main/resources/templates/login/idSearch.html
@@ -5,33 +5,23 @@
 
 <div layout:fragment="content">
 
-<!--    <form action="#" role="form" method="post" class="mt-5"  th:object="${MemberDTO}">-->
-<!--        <h2>아이디 찾기</h2>-->
-<!--        <div class="form-group mt-5">-->
-<!--            <label th:for="id">아이디</label>-->
-<!--            <input type="text" th:field="*{id}" class="form-control" placeholder="아이디를 입력해주세요">-->
-<!--            <p th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="fieldError">Incorrect data</p>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="password">비밀번호</label>-->
-<!--            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력해주세요">-->
-<!--            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="name">이름</label>-->
-<!--            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">-->
-<!--            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <label th:for="nickname">닉네임</label>-->
-<!--            <input type="text" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">-->
-<!--            <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>-->
-<!--        </div>-->
-<!--        <div style="text-align: center">-->
-<!--            <button type="submit" class="btn btn-primary" style="">회원가입</button>-->
-<!--        </div>-->
-<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-<!--    </form>-->
+    <form action="/blog/idSearch" role="form" method="post" class="mt-5"  th:object="${MemberDTO}">
+        <h2>아이디 찾기</h2>
+        <div class="form-group">
+            <label th:for="name">이름</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력해주세요">
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+        </div>
+        <div class="form-group">
+            <label th:for="nickname">닉네임</label>
+            <input type="text" th:field="*{nickName}" class="form-control" placeholder="닉네임을 입력해주세요">
+            <p th:if="${#fields.hasErrors('nickName')}" th:errors="*{nickName}" class="fieldError">Incorrect data</p>
+        </div>
+        <div style="text-align: center">
+            <button type="submit" class="btn btn-primary" style="">아이디 찾기</button>
+        </div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </form>
 </div>
 
 </html>
