--- a/src/main/resources/templates/main/createBlogForm.html
+++ b/src/main/resources/templates/main/createBlogForm.html
@@ -10,7 +10,7 @@
             <form th:action="@{/main/createBlog}" method="post" enctype="multipart/form-data" th:object="${blogInfoDTO}">
                 <div class="form-group mb-3">
                     <label th:for="my_profile">한줄 블로그 소개</label>
-                    <input type="text" th:field="*{my_profile}" class="form-control" placeholder="한줄 블로그 소개">
+                    <input type="text" th:field="*{myProfile}" class="form-control" placeholder="한줄 블로그 소개">
                 </div>
                 <div class="form-group mb-3 d-flex">
                     <label th:for="titleBgColor">타이틀 컬러</label>
