--- a/src/main/resources/templates/blog/memberBlogForm.html
+++ b/src/main/resources/templates/blog/memberBlogForm.html
@@ -21,12 +21,11 @@
                             <a th:classappend="${Blog.bnum}" href="#"
                                th:text="${Blog.blogAuthority== T(com.portfolio.blog.constant.Authority).PERMISSION ? '공개': Blog.blogAuthority == T(com.portfolio.blog.constant.Authority).GROUP ?  '친구만' : '비공개'}"></a>
                         </header>
-                        <span class="cat-links" th:if="${friendList} != null">
-				  <button name="friendAdd" th:each="friend : ${friendList}" th:if="${Blog.member.id} != friend"
-                          th:value="${Blog.member.id}">친구삭제</button>
-				            </span>
-                        <span class="cat-links" th:unless="${friendList} != null">
-                            <button name="friendAdd" th:value="${Blog.member.id}">친구추가</button>
+                        <span class="cat-links"  th:if="${friendList.contains(Blog.member.id)}">
+                                <button name="friendDelete" th:value="${Blog.member.id}">친구삭제</button>
+                            </span>
+                        <span class="cat-links" th:unless="${friendList.contains(Blog.member.id)}">
+                                <button name="friendAdd" th:value="${Blog.member.id}">친구추가</button>
                             </span>
                     </article>
                 </div>
@@ -123,14 +122,46 @@
                       success : function(response, status) {
                           console.log('성공')
                           alert(''+response)
+                          location.reload();
                       },//success
                       error: function(response, status) {
                               console.log(response,status);
                               alert(''+response.responseText);
+                              location.reload();
                       }//error
 
                   })//ajax
   })
+  $('button[name=friendDelete]').click(function() {
+  let friendId = $(this).val();
+       console.log(friendId)
+       var id = {friendId : friendId}
+       console.log(id)
+
+       var token = $("meta[name='_csrf']").attr("content");
+       var header = $("meta[name='_csrf_header']").attr("content");
+                  $.ajax({
+                      type : 'delete',
+                      url : '/blog/friendDelete',
+                      data :  JSON.stringify(id),
+                      dataType: 'text',
+                      contentType : "application/json",
+                      beforeSend : function(xhr){
+                        xhr.setRequestHeader(header, token)
+                      },
+                      success : function(response, status) {
+                          console.log('성공')
+                          alert(''+response)
+                          location.reload();
+                      },//success
+                      error: function(response, status) {
+                              console.log(response,status);
+                              alert(''+response.responseText);
+                              location.reload();
+                      }//error
+
+                  })//ajax
+                  })
 })
 
 </script>
