--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -27,7 +27,6 @@
     <script th:src="@{/js/tabs.js}"></script>
     <script th:src="@{/js/toggle.js}"></script>
     <script th:src="@{/js/validate.js}"></script>
-<!--    <script th:src="@{/js/tinymce/tinymce.min.js}"></script>-->
-    <script src="https://cdn.tiny.cloud/1/06nber0chh8bgbtcvvnuiqz1lgsq3cdygyoah5kakh2i8bp1/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <script th:src="@{/js/tinymce/tinymce.min.js}"></script>
 </div>
 </html>
